about page's carousel images update and headings

--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
                 <img src="assets/images/about-page/hero-section-img/about-hero-img-1.webp" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>Welcome to Bhagirath Industry</h1>
+                    <h1>Accelerating Growth in Agriculture and Transportation with Innovative Solutions</h1>
                     <p>
                         we are committed to innovation and excellence. With state-of-the-art facilities and a dedicated
                         team of professionals, we deliver top-quality solutions tailored to meet the needs of various
@@ -221,7 +221,7 @@
                 <img src="assets/images/about-page/hero-section-img/about-hero-img-2.webp" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>Empowering Factories, Empowering Workers: Bhagirath Industry</h1>
+                    <h1>Fueling Growth in Agriculture and Transportation through Intelligent Solutions</h1>
                     <p>
                         At Bhagirath Industry, we believe in building a sustainable future by enhancing factory
                         efficiency and worker safety. Our advanced solutions are crafted to streamline operations,
