agro-commodities new product card added and some content updated

--- a/agro-commodities.html
+++ b/agro-commodities.html
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/petroleum-oil-page/hero-img/petroleum-oil-page-hero-img-3.webp"
+                <img src="assets/images/agro-commodities/hero-img/agro-commodities-hero-img-3.webp"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
                     <h1>Empowering Growth in Agriculture with Trusted Partnerships</h1>
@@ -297,22 +297,60 @@
             <!-- 6th Card -->
             <div class="card-product col-md-6 p-4">
                 <div class="img-container-no-overflow">
-                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.webp"
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-6.webp"
                         class="card-img-top" alt="Yellow maize">
                 </div>
                 <div class="card-body regular-font">
                     <h3>YELLOW MAIZE</h3>
-                    <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient
-                        in food processing and confectionery.</p>
+                    <p>A versatile cereal grain used in food, livestock feed, and industrial products like cornstarch
+                        and syrup, prized for its nutrition.</p>
                     <ul>
-                        <li>Sugar from sugarcane and sugar beets sweetens products.</li>
-                        <li>Key in confectionery and beverages.</li>
-                        <li>Top producers: Brazil, India, China.</li>
-                        <li>Forms: granulated, brown, powdered.</li>
-                        <li>Concerns about excessive sugar drive interest in alternatives.</li>
+                        <li>Maize (corn): versatile cereal with many uses.</li>
+                        <li>Staple food, livestock feed, source of corn oil and syrup.</li>
+                        <li>Major producers: U.S., China, Brazil.</li>
+                        <li>Important for biofuel production.</li>
+                        <li>Used globally in forms like cornflakes and tortillas.</li>
                     </ul>
                 </div>
             </div>
+
+            <!-- 7th Card -->
+            <div class="card-product col-md-6 p-4">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-7.webp"
+                        class="card-img-top" alt="Spices">
+                </div>
+                <div class="card-body regular-font">
+                    <h3>Spices</h3>
+                    <p>Spices elevate the taste of dal and pulses, key plant-based proteins in global cuisines.</p>
+                    <ul>
+                        <li>Lentils, chickpeas, and beans add texture and are staples worldwide.</li>
+                        <li>Common in Indian, Mediterranean, and Middle Eastern dishes.</li>
+                        <li>Full of protein, fiber, and essential vitamins, perfect for vegan and vegetarian diets.</li>
+                        <li>Pulses enrich soil through nitrogen fixation, supporting eco-friendly agriculture.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- 8th Card -->
+            <div class="card-product col-md-6 p-4">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-8.webp"
+                        class="card-img-top" alt="DryFruits">
+                </div>
+                <div class="card-body regular-font">
+                    <h3>Dry Fruits</h3>
+                    <p>Highly nutritious and energy-rich, dry fruits are used as snacks, in desserts, and in cooking.
+                    </p>
+                    <ul>
+                        <li>Rich in vitamins, minerals, and antioxidants.</li>
+                        <li>Common types: almonds, walnuts, cashews, raisins, and dates.</li>
+                        <li>Boosts energy and supports overall health.</li>
+                        <li>Widely used globally in both sweet and savory dishes.</li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
     </div>
 
