some new cards added in our-services

--- a/our-services.html
+++ b/our-services.html
@@ -394,6 +394,242 @@
           </div>
         </div>
       </div>
+
+      <!-- From here some more card added -->
+      <!-- Card 7 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (6) (2).webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Industrial Infrastructure Division</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 8 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (6) (2).webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Shipping & Logistics Solutions</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 9 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Architectural-Design-Services.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Architectural Design Services</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 10 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Structural-Engineering-Services.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Structural Engineering Services</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 11 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Mechanical-Utility-Engineering-Services.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Mechanical Utility Engineering Services</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 12 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Fire-Protection-Engineering-Services.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Fire Protection Engineering Services</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 13 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/HVAC-&-R-Engineering-Services.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">HVAC & R Engineering Services</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 14 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Electrical-Engineering.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Electrical Engineering Services</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 15 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Site-Infrastructure-Engineering.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Site Infrastructure Engineering</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 16 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Sustainable-Green-Building.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Sustainable Green Building Design</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 17 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Campus-master-planning.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Campus Master Planning Services</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 18 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Master-palanning-for-large-ind.-park.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Master Planning for large industrial park</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 19 -->
+      <div class="col-lg-4 col-md-6 new-our-services-cards-card">
+        <div class="new-our-services-cards-image-container">
+          <div class="new-our-services-cards-image"
+            style="background-image: url('assets/images/our-services-icon-img/cards/Project-Management.webp');">
+            <div class="new-our-services-cards-overlay">
+              <p class="new-our-services-cards-overlay-text pt-2">
+                <span class="regular-font">Project Management Services</span>
+                <br>
+                Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
