download brochure button added, social media icon code commented for mobile view and the menu icon size increase for responsive views

--- a/contact-us.html
+++ b/contact-us.html
@@ -67,14 +67,16 @@
         <li><a href="./our-services.html">Our Services</a></li>
         <li><a href="./career.html">Career</a></li>
         <li><a href="./contact-us.html" class="new-navbar-contact-us-btn active">Contact Us</a></li>
+        <li><a href="./assets/pdf/Brochure.pdf" download="" class="pdf">Download Brochure</a></li>
       </ul>
-      <div class="new-navbar-social-icons-2 pe-2">
+      <!-- I comment this icons code -->
+      <!-- <div class="new-navbar-social-icons-2 pe-2">
         <a href="#" class="our-team-icon"><i class="bi bi-google"></i></a>
         <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
         <a href="#" class="our-team-icon"><i class="bi bi-linkedin"></i></a>
         <a href="#" class="our-team-icon"><i class="bi bi-facebook"></i></a>
         <a href="#" class="our-team-icon"><i class="bi bi-twitter-x"></i></a>
-      </div>
+      </div> -->
       <div class="new-navbar-toggler" id="navbarToggler">
         <i class="bi bi-list"></i>
       </div>
@@ -126,6 +128,7 @@
       <li><a href="./our-services.html">Our Services</a></li>
       <li><a href="./career.html">Career</a></li>
       <li><a href="./contact-us.html" class="active">Contact Us</a></li>
+      <li><a href="./assets/pdf/Brochure.pdf" download="" class="pdf">Download Brochure</a></li>
     </ul>
   </div>
 
