--- a/edible-and-non-edible-oils.html
+++ b/edible-and-non-edible-oils.html
@@ -70,15 +70,17 @@
         <li><a href="./our-services.html">Our Services</a></li>
         <li><a href="./career.html">Career</a></li>
         <li><a href="./contact-us.html" class="new-navbar-contact-us-btn">Contact Us</a></li>
+        <li><a href="./assets/pdf/Brochure.pdf" download="" class="pdf">Download Brochure</a></li>
       </ul>
+      <!-- I comment this icons code -->
       <!-- bottom part with social icons in navbar starts-->
-      <div class="new-navbar-social-icons-2 pe-2">
+      <!-- <div class="new-navbar-social-icons-2 pe-2">
         <a href="#" class="our-team-icon"><i class="bi bi-google"></i></a>
         <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
         <a href="#" class="our-team-icon"><i class="bi bi-linkedin"></i></a>
         <a href="#" class="our-team-icon"><i class="bi bi-facebook"></i></a>
         <a href="#" class="our-team-icon"><i class="bi bi-twitter-x"></i></a>
-      </div>
+      </div> -->
       <div class="new-navbar-toggler" id="navbarToggler">
         <i class="bi bi-list"></i>
       </div>
@@ -129,6 +131,7 @@
       <li><a href="./our-services.html">Our Services</a></li>
       <li><a href="./career.html">Career</a></li>
       <li><a href="./contact-us.html">Contact Us</a></li>
+      <li><a href="./assets/pdf/Brochure.pdf" download="" class="pdf">Download Brochure</a></li>
     </ul>
   </div>
   <!-- Complete Navbar Code  Ends -->
