--- a/building-materials.html
+++ b/building-materials.html
@@ -68,14 +68,16 @@
                 <li><a href="./our-services.html">Our Services</a></li>
                 <li><a href="./career.html">Career</a></li>
                 <li><a href="./contact-us.html" class="new-navbar-contact-us-btn">Contact Us</a></li>
+                <li><a href="./assets/pdf/Brochure.pdf" download="" class="pdf">Download Brochure</a></li>
             </ul>
-            <div class="new-navbar-social-icons-2 pe-2">
+            <!-- I comment this icons code -->
+            <!-- <div class="new-navbar-social-icons-2 pe-2">
                 <a href="#" class="our-team-icon"><i class="bi bi-google"></i></a>
                 <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
                 <a href="#" class="our-team-icon"><i class="bi bi-linkedin"></i></a>
                 <a href="#" class="our-team-icon"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="our-team-icon"><i class="bi bi-twitter-x"></i></a>
-            </div>
+            </div> -->
             <div class="new-navbar-toggler" id="navbarToggler">
                 <i class="bi bi-list"></i>
             </div>
@@ -127,6 +129,7 @@
             <li><a href="./our-services.html">Our Services</a></li>
             <li><a href="./career.html">Career</a></li>
             <li><a href="./contact-us.html">Contact Us</a></li>
+            <li><a href="./assets/pdf/Brochure.pdf" download="" class="pdf">Download Brochure</a></li>
         </ul>
     </div>
 
